# pysongman

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py
PySongMan/: main.py
PySongMan/lib/: api.py  app_types.py  application.py  models.py  transformer.py
audiolib_scratchpad/: test_simpleaudio.py
data_scratchpad/: db_analyzer.py  db_creator.py  db_repair_duration.py  loader.py  reader.py  triple_valuesets.py  walker.py
pybass_scratchpad/: BASS_LICENSE.txt  bass_channel.py  bass_module.py  bass_stream.py  pybass3.py  qt_simple_song_player.py  song.py
pybass_scratchpad/structs/: info.py
pysongman/: __init__.py  __main__.py
pysongman/lib/: qtd.py  (+9 more)
pysongman_old/: __init__.py
scratchpads/: basic_abstract_model_experiments.py  basic_abstract_model_view.py  bridge_mediaplaylist_to_domain_model_experiment.py  cascade_tree_widget.py  dynamic_triple_tables.py  experiment_overload_qmediacontent.py  ffprobe_analyzer.py  hello_world.py  music_player_basic.py  pysongman.sqlite3  readme.md  sa_models1.py  sqlalchemy_triple_view.py  table.qml  table_qml.py  triple_model_view.py
scripts/: amp_mapped.py  async_import.py  fast_probe.pyx  import_test.py  mp_import.py  mp_mapped.py
tests/: test_dotted_api.py  test_lib_song_info_SongInfo.py  test_transformer_dict_type.py  test_transformer_functions.py  test_transformer_typeddict_2_interface.py  test_transformer_typedef.py  test_transformer_typedef2typedef.py  test_typed_dict_2_ts_interface.py  utils.py
ui/: .eslintrc.cjs  .prettierrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json
(+93 files in other folders)
