[tool.poetry]
name = "pysongman"
version = "0.1.0"
description = ""
authors = ["devdave <devdave@ominian.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
