[tool.poetry]
name = "pysongman"
version = "0.1.0"
description = ""
authors = ["devdave <devdave@ominian.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
flask = "^3.0.3"
typed-argument-parser = "^1.10.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
ipython = "^8.24.0"
pytest = "^8.2.0"
pylint = "^3.1.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = ['.']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length=120
disable = [
    'invalid-name',
    'not-callable'
]
